# narrative-detect

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_DEMO.md  pyproject.toml
data/: sample_posts.jsonl
demo/: NarrativeDetect_Demo.ipynb
src/narrative_detect/: cli.py  detect.py  ideas.py  ingest.py
web/: app.py
